# ansible-role-openstack-operations

./: .gitreview  README-backup-ops.md  README.md  README.rst  ansible-requirements.txt  non-galaxy.txt  setup.cfg  test-requirements.txt  tox.ini
ci-scripts/: install-non-galaxy.sh
defaults/: main.yml
files/: tripleo-service-mapping.yaml
meta/: main.yml
playbooks/: restart-service.yml
tasks/: backup_filesystem.yml  backup_mysql.yml  backup_pacemaker.yml  backup_redis.yml  cleanup_docker.yml  cleanup_images.yml  container_cleanup.yml  disable_ssh.yml  docker.yml  enable_ssh.yml  fetch_logs.yml  initialize_backup_host.yml  main.yml  podman.yml  restart_service.yml  restore_galera.yml  restore_redis.yml  set_bootstrap.yml  validate_galera.yml  validate_redis.yaml
templates/: backup_mysql.sh.j2  backup_pacemaker.sh.j2  backup_ssh_config.j2  create_new_db.sh.j2
vars/: main.yml  tripleo-service-mapping.yaml
