[metadata]
name = ansible-role-openstack-operations
summary = ansible-openstack-operations - Ansible role to perform some OpenStack Day 2 Operations
description-file =
    README.rst
author = TripleO Team
author-email = openstack-dev@lists.openstack.org
home-page = https://opendev.org/openstack/ansible-role-openstack-operations
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/openstack-operations/defaults = defaults/*
    share/ansible/roles/openstack-operations/handlers = handlers/*
    share/ansible/roles/openstack-operations/meta = meta/*
    share/ansible/roles/openstack-operations/tasks = tasks/*
    share/ansible/roles/openstack-operations/templates = templates/*
    share/ansible/roles/openstack-operations/tests = tests/*
    share/ansible/roles/openstack-operations/vars = vars/*
    share/ansible/roles/openstack-operations/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

